load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "simple-encryption",
    srcs = glob([
        "src/*.rs",
        "src/**/*.rs",
    ]),
    deps = [
        "@crates//:chacha20poly1305",
        "@crates//:curve25519-dalek",
        "@crates//:ed25519-dalek",
        "@crates//:pqc_kyber",
        "@crates//:rand",
        "@crates//:thiserror",
        "@crates//:x25519-dalek",
    ],
)
