[package]
name = "simple-encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
thiserror = "1.0.64"
x25519-dalek = "2.0.1"
# chacha20poly1305.workspace = true
# curve25519-dalek.workspace = true
# ed25519-dalek.workspace = true
# pqc_kyber.workspace = true
# rand.workspace = true
# rust-crypto.workspace = true
# thiserror.workspace = true
# x25519-dalek.workspace = true
